fix swap person to actor in outbox pattern
